# bargain

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Procfile  RAILWAY_DEPLOYMENT.md  README.md  ROADMAP.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.json  railway.toml  render.yaml
bargain-api/: .env.example  .gitignore  Dockerfile  Procfile  README.md  alembic.ini  capture_x_session.py  post_to_x_cdp.py  post_to_x_via_chrome.py  pyproject.toml  railway.json  railway.toml  requirements.txt  scrape_and_post.py
bargain-api/alembic/: env.py
bargain-api/alembic/versions/: 001_initial_schema.py  002_user_profile_fields.py  003_add_waitlist.py  004_add_arbitrage.py  005_add_alert_read_status.py  006_add_stripe_subscription_fields.py  007_add_webauthn_passkey_fields.py  008_add_coupon_codes.py  009_add_notification  010_add_niche_system.py  011_add_retailer_columns.py  012_widen_asin.py  013_add_phone_number.py  014_add_user_deals.py  015_add_seller_voucher.py  016_add_deal_score.py  017_add_referrals.py  018_add_notification_preferences.py  019_add_affiliate_clicks.py  020_add_user_updated_at_trigger.py  021_add_watchlist_user_id_index.py
bargain-api/app/: __init__.py  main.py  r
bargain-api/app/core/: config.py  firebase.py
bargain-api/app/data/: impact_campaigns.json
bargain-api/app/db/: models.py  session.py
bargain-api/app/routers/: affiliate.py  alerts.py  arbitrage.py  (+11 more)
bargain-api/tests/: conftest.py  test_critical_paths.py
(+85 files in other folders)
